--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-misc.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/animate.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-main.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- JavaScripts -->
     <script src="/assets/website/js/frontend/sockscap64/jquery-1.10.2.min.js"></script>
     <script src="/assets/website/js/frontend/sockscap64/modernizr.js"></script>
@@ -120,6 +121,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-20">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-20-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-20-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、美国、新加坡、加拿大、日本、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-19">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、日本、加拿大、新加坡、美国、欧洲、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-17">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-17-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -232,34 +261,6 @@
                                     这一次的节点更新覆盖了日本、香港、欧洲、新加坡、加拿大、韩国、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-08">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-8-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="4月8日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-8-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">4月8日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、香港、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-07">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-7-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-7-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、新加坡、加拿大、香港、欧洲、韩国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -270,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-node-subscribe.htm" title="3月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">3月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-84441.htm" title="打疫苗的时候又被动物抓伤了怎么办?（被打了疫苗的动物咬了）">打疫苗的时候又被动物抓伤了怎么办?（被打了疫苗的动物咬了）</a></li>
-                        <li class="py-2"><a href="/news/article-78861.htm" title="动物医院都有什么部门管理 动物医院都有什么部门管理的">动物医院都有什么部门管理 动物医院都有什么部门管理的</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-27-node-share-links.htm" title="3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-94194.htm" title="动物疫苗市场竞争（动物疫苗行业）">动物疫苗市场竞争（动物疫苗行业）</a></li>
-                        <li class="py-2"><a href="/news/article-93200.htm" title="vue的自动化路由+分模块管理+路由懒加载">vue的自动化路由+分模块管理+路由懒加载</a></li>
-                        <li class="py-2"><a href="/news/article-67538.htm" title="正则表达式\ip地址匹配方法">正则表达式\ip地址匹配方法</a></li>
-                        <li class="py-2"><a href="/news/article-72758.htm" title="驱虫猫咪价格表（宠物猫驱虫价格）">驱虫猫咪价格表（宠物猫驱虫价格）</a></li>
-                        <li class="py-2"><a href="/news/article-73430.htm" title="EF Core 的 Code First 模式">EF Core 的 Code First 模式</a></li>
-                        <li class="py-2"><a href="/news/article-80925.htm" title="Python 垃圾回收机制原理详解">Python 垃圾回收机制原理详解</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-subscribe-node.htm" title="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-node-share-links.htm" title="3月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">3月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
+                        <li class="py-2"><a href="/news/article-74096.htm" title="北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）">北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-6-free-node-subscribe.htm" title="4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-free-high-speed-nodes.htm" title="3月21日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">3月21日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-74767.htm" title="动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）">动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-20-free-node-subscribe-links.htm" title="3月20日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月20日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-89501.htm" title="谁放弃了《快乐大本营》？(快乐到底是谁)">谁放弃了《快乐大本营》？(快乐到底是谁)</a></li>
+                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">50</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
