--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
         <link rel="canonical" href="https://sockscap64.github.io" />
-    <title>Sockscap64 | 免费公益Clash/V2ray/SSR/Sockscap64节点订阅链接地址分享</title>
-        <meta name="keywords" content="Sockscap64节点分享,Clash,SSR,V2ray,Sockscap64机场订阅" />
-        <meta name="description" content="Sockscap64每天会更新免费节点，包括Clash、SSR、V2ray等类型。它会提供详细的节点信息，如速度和覆盖地区等，还附有简明教程。Sockscap64可以满足用户各种需求，为用户提供稳定可靠的免费节点，帮助用户轻松实现科学上网。" />
+    <title>Sockscap64免费节点订阅 | Clash/V2Ray/SSR节点每日更新</title>
+        <meta name="keywords" content="Sockscap64, 免费节点, Clash订阅, V2Ray节点, SSR节点, 科学上网, 免费机场, 节点订阅, 高速节点, Clash Meta, V2Ray, SSR, 节点更新" />
+        <meta name="description" content="Sockscap64每日更新全球免费Clash、V2Ray和SSR节点订阅，涵盖美国、欧洲、亚洲等地区，最高速度可达23M/S。提供详细节点信息、速度和地区分布，支持Windows、Mac、Android等平台，帮助用户轻松实现科学上网。" />
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="Sockscap64免费机场节点分享官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://sockscap64.github.io" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
-    <meta property="og:title" content="Sockscap64 | 免费公益Clash/V2ray/SSR/Sockscap64节点订阅链接地址分享" />
+    <meta property="og:title" content="Sockscap64免费节点订阅 | Clash/V2Ray/SSR节点每日更新" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
-        <meta property="og:description" content="Sockscap64每天会更新免费节点，包括Clash、SSR、V2ray等类型。它会提供详细的节点信息，如速度和覆盖地区等，还附有简明教程。Sockscap64可以满足用户各种需求，为用户提供稳定可靠的免费节点，帮助用户轻松实现科学上网。" />
+        <meta property="og:description" content="Sockscap64每日更新全球免费Clash、V2Ray和SSR节点订阅，涵盖美国、欧洲、亚洲等地区，最高速度可达23M/S。提供详细节点信息、速度和地区分布，支持Windows、Mac、Android等平台，帮助用户轻松实现科学上网。" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Sockscap64 | 免费公益Clash/V2ray/SSR/Sockscap64节点订阅链接地址分享">
+    <meta name="apple-mobile-web-app-title" content="Sockscap64免费节点订阅 | Clash/V2Ray/SSR节点每日更新">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-misc.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/animate.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-main.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- JavaScripts -->
     <script src="/assets/website/js/frontend/sockscap64/jquery-1.10.2.min.js"></script>
     <script src="/assets/website/js/frontend/sockscap64/modernizr.js"></script>
@@ -123,6 +124,34 @@
                 <div class="col-md-9">
                     <h2 style="font-size: 2rem;margin-bottom: 1.5rem;">最近更新</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-20">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-20-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-20-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、美国、新加坡、加拿大、日本、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-19">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、日本、加拿大、新加坡、美国、欧洲、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-17">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-17-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -375,34 +404,6 @@
                                     这一次的节点更新覆盖了美国、日本、新加坡、欧洲、韩国、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-29">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="3月29日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月29日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、欧洲、加拿大、美国、韩国、日本、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-28">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-28-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="3月28日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-28-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月28日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、美国、香港、新加坡、欧洲、韩国、加拿大等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -412,16 +413,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-74096.htm" title="北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）">北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）</a></li>
-                        <li class="py-2"><a href="/news/article-95454.htm" title="重庆领养猫咪宠物平台（重庆领养猫咪宠物平台有哪些）">重庆领养猫咪宠物平台（重庆领养猫咪宠物平台有哪些）</a></li>
-                        <li class="py-2"><a href="/news/article-97655.htm" title="广州宠物领养微信群号 广州宠物领养微信群号是多少">广州宠物领养微信群号 广州宠物领养微信群号是多少</a></li>
-                        <li class="py-2"><a href="/news/article-96203.htm" title="小型宠物粮食加工设备有哪些厂家（宠物粮食加工厂怎么起步）">小型宠物粮食加工设备有哪些厂家（宠物粮食加工厂怎么起步）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-3-node-share.htm" title="3月3日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月3日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-75442.htm" title="家装用什么电线管好一点(家装用什么电线管好呢)">家装用什么电线管好一点(家装用什么电线管好呢)</a></li>
-                        <li class="py-2"><a href="/news/article-83028.htm" title="广州有领养宠物猫的地方吗?（广州有领养宠物猫的地方吗在哪里）">广州有领养宠物猫的地方吗?（广州有领养宠物猫的地方吗在哪里）</a></li>
-                        <li class="py-2"><a href="/news/article-74767.htm" title="动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）">动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）</a></li>
-                        <li class="py-2"><a href="/news/article-68200.htm" title="动物园兽医院电话 动物园宠物医院电话">动物园兽医院电话 动物园宠物医院电话</a></li>
+                        <li class="py-2"><a href="/news/article-68199.htm" title="开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）">开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-node-subscribe.htm" title="3月17日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月17日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-5-node-share-links.htm" title="4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-75441.htm" title="同安宠物救助（同安宠物领养中心）">同安宠物救助（同安宠物领养中心）</a></li>
+                        <li class="py-2"><a href="/news/article-99126.htm" title="猫咪的妙三多疫苗隔多久打一针（妙三多猫疫苗间隔时间）">猫咪的妙三多疫苗隔多久打一针（妙三多猫疫苗间隔时间）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-node-subscribe.htm" title="3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-88765.htm" title="兽医疫苗批号查询系统（兽用疫苗真伪查询）">兽医疫苗批号查询系统（兽用疫苗真伪查询）</a></li>
+                        <li class="py-2"><a href="/news/article-70777.htm" title="瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）">瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）</a></li>
+                        <li class="py-2"><a href="/news/article-72757.htm" title="我所在的城市里有一家宠物医院的英文怎么写（在我的城市里有一家宠物医院的英语）">我所在的城市里有一家宠物医院的英文怎么写（在我的城市里有一家宠物医院的英语）</a></li>
+                        <li class="py-2"><a href="/news/article-100649.htm" title="中国十大宠物食品公司 中国十大宠物食品公司排名">中国十大宠物食品公司 中国十大宠物食品公司排名</a></li>
                     </ul>
     </div>
 </div>
@@ -433,7 +434,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">50</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
