--- a/client.htm
+++ b/client.htm
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-misc.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/animate.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-main.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- JavaScripts -->
     <script src="/assets/website/js/frontend/sockscap64/jquery-1.10.2.min.js"></script>
     <script src="/assets/website/js/frontend/sockscap64/modernizr.js"></script>
@@ -289,16 +290,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share-links.htm" title="3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-97654.htm" title="动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）">动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-8-free-subscribe-node.htm" title="3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-node-subscribe-links.htm" title="3月10日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月10日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-82307.htm" title="动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌">动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌</a></li>
-                        <li class="py-2"><a href="/news/article-87315.htm" title="动物疫苗接种简报标题新颖（动物预防接种计划表）">动物疫苗接种简报标题新颖（动物预防接种计划表）</a></li>
+                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
+                        <li class="py-2"><a href="/news/article-99911.htm" title="中国宠物食品排名（中国宠物食品排名榜）">中国宠物食品排名（中国宠物食品排名榜）</a></li>
+                        <li class="py-2"><a href="/news/article-88048.htm" title="葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)">葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)</a></li>
+                        <li class="py-2"><a href="/news/article-81602.htm" title="宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）">宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）</a></li>
+                        <li class="py-2"><a href="/news/article-89500.htm" title="长沙狗狗领养中心 长沙狗狗领养中心在哪">长沙狗狗领养中心 长沙狗狗领养中心在哪</a></li>
                         <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-4-node-share.htm" title="3月4日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">3月4日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-89501.htm" title="谁放弃了《快乐大本营》？(快乐到底是谁)">谁放弃了《快乐大本营》？(快乐到底是谁)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-27-node-share-links.htm" title="3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-83028.htm" title="广州有领养宠物猫的地方吗?（广州有领养宠物猫的地方吗在哪里）">广州有领养宠物猫的地方吗?（广州有领养宠物猫的地方吗在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-68837.htm" title="动物疫苗是有毒有害吗（动物疫苗的重要性）">动物疫苗是有毒有害吗（动物疫苗的重要性）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-17-free-high-speed-nodes.htm" title="4月17日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">4月17日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-91050.htm" title="动物疫苗的使用方法有哪些种类及作用图片（动物疫苗的使用方法有哪些种类及作用图片视频）">动物疫苗的使用方法有哪些种类及作用图片（动物疫苗的使用方法有哪些种类及作用图片视频）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +311,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">50</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
