--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-misc.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/animate.css">
     <link rel="stylesheet" href="/assets/website/css/sockscap64/templatemo-main.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- JavaScripts -->
     <script src="/assets/website/js/frontend/sockscap64/jquery-1.10.2.min.js"></script>
     <script src="/assets/website/js/frontend/sockscap64/modernizr.js"></script>
@@ -120,6 +121,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-8-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="4月8日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-8-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月8日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、香港、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、加拿大、香港、欧洲、韩国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-06">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-6-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -232,34 +261,6 @@
                                     这一次的节点更新覆盖了美国、日本、新加坡、欧洲、韩国、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-29">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="3月29日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月29日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、欧洲、加拿大、美国、韩国、日本、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-28">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-28-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="3月28日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-28-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月28日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、美国、香港、新加坡、欧洲、韩国、加拿大等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -270,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-71441.htm" title="宠物零食加工厂要投资多少钱一个月（宠物零食加工设备批发）">宠物零食加工厂要投资多少钱一个月（宠物零食加工设备批发）</a></li>
-                        <li class="py-2"><a href="/news/article-83027.htm" title="Python 函数进阶-递归函数_在线工具">Python 函数进阶-递归函数_在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-68836.htm" title="动物疫苗法规制定 动物疫苗法规制定依据">动物疫苗法规制定 动物疫苗法规制定依据</a></li>
-                        <li class="py-2"><a href="/news/article-68837.htm" title="动物疫苗是有毒有害吗（动物疫苗的重要性）">动物疫苗是有毒有害吗（动物疫苗的重要性）</a></li>
-                        <li class="py-2"><a href="/news/article-80925.htm" title="Python 垃圾回收机制原理详解">Python 垃圾回收机制原理详解</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-5-free-subscribe-node.htm" title="3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-82307.htm" title="动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌">动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌</a></li>
-                        <li class="py-2"><a href="/news/article-79532.htm" title="php redis 二进制,关于php:PHP操作redis中bitMap">php redis 二进制,关于php:PHP操作redis中bitMap</a></li>
-                        <li class="py-2"><a href="/news/article-75442.htm" title="家装用什么电线管好一点(家装用什么电线管好呢)">家装用什么电线管好一点(家装用什么电线管好呢)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share-links.htm" title="3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-65668.htm" title="给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）">给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）</a></li>
+                        <li class="py-2"><a href="/news/article-89500.htm" title="长沙狗狗领养中心 长沙狗狗领养中心在哪">长沙狗狗领养中心 长沙狗狗领养中心在哪</a></li>
+                        <li class="py-2"><a href="/news/article-87315.htm" title="动物疫苗接种简报标题新颖（动物预防接种计划表）">动物疫苗接种简报标题新颖（动物预防接种计划表）</a></li>
+                        <li class="py-2"><a href="/news/article-88765.htm" title="兽医疫苗批号查询系统（兽用疫苗真伪查询）">兽医疫苗批号查询系统（兽用疫苗真伪查询）</a></li>
+                        <li class="py-2"><a href="/news/article-91721.htm" title="liunx中搭建python3.7环境和安装pycharm并搭建Django">liunx中搭建python3.7环境和安装pycharm并搭建Django</a></li>
+                        <li class="py-2"><a href="/news/article-71442.htm" title="宠物领养活动宣传语（宠物领养活动方案）">宠物领养活动宣传语（宠物领养活动方案）</a></li>
+                        <li class="py-2"><a href="/news/article-100648.htm" title="Java-NIO之Buffer（缓冲区）">Java-NIO之Buffer（缓冲区）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-20-node-share-links.htm" title="4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月20日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-94703.htm" title="深圳益沣成资产管理有限公司（深圳市益成实业有限公司）">深圳益沣成资产管理有限公司（深圳市益成实业有限公司）</a></li>
+                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">50</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
